fix: filter button visibility

--- a/src/app/base/pages/projects-page/projects-page.component.scss
+++ b/src/app/base/pages/projects-page/projects-page.component.scss
@@ -130,14 +130,11 @@
 form {
   position: relative;
   top: 0.4em;
-  left: 1.5em;
+  left: 2.5em;
   transition: all 1s;
   width: 42px;
   height: 42px;
   border-radius: 20px;
-  @media screen and (max-width: 540px) {
-    margin-left: 7em;
-  }
 }
 
 input {
@@ -176,7 +173,7 @@ input {
 }
 
 form:hover {
-  width: 12em;
+  width: 20em;
   cursor: pointer;
 }
 
@@ -192,19 +189,19 @@ form:hover .material-icons {
 /* Sort block */
 section {
   display: table;
-  margin-top: 1.5em;
-  font-size: 18px;
+  margin-top: 1em;
+  margin-left: 2em;
+  font-size: 16px;
   font-weight: 400;
   color: $secondary-text-color;
   opacity: 0.7;
   @media screen and (max-width: 540px) {
-    margin-top: 1.5em;
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .filter-label {
     display: table-cell;
-    padding-right: .3em;
+    padding-right: .1em;
     min-width: 100px;
   }
 
@@ -213,7 +210,7 @@ section {
   }
 
   .filter-button-row .mat-button-base {
-    margin: 0 .3rem 0 0;
+    margin: 0 .2rem 0 0;
   }
 
   .underline {
@@ -223,7 +220,6 @@ section {
     background-size: 100% 2px;
     transition: background-size .3s;
   }
-
 }
 
 .filter-container {
@@ -260,7 +256,7 @@ section {
   box-shadow: 0px 4px 8px 0px $shadow-accent;
 }
 
-.dropdown-content a {
+.dropdown-content span {
   color: lighter($secondary-text-color, 25%);
   padding: 12px 16px;
   text-decoration: none;
@@ -268,7 +264,8 @@ section {
   display: block;
 }
 
-.dropdown-content a:hover {
+.dropdown-content span:hover {
+  color: $color-white;
   background-color: $divider-color;
 }
 
@@ -281,6 +278,7 @@ section {
   top: 0;
   left: 0;
 }
+
 .filter-dropdown:hover .dropbtn {
   background-color: $shadow-accent;
 }
